competitive Analysis questions added

--- a/src/css/casheLearnings.css
+++ b/src/css/casheLearnings.css
@@ -213,7 +213,7 @@ a{
     top : 18.5%;
     left : 28.5%;
 }
-#display-fintech-quiz-page #fintech-quiz-tips,#display-cashe-quiz-page #cashe-quiz-tips,#display-bhanix-quiz-page #bhanix-quiz-tips
+#display-fintech-quiz-page #fintech-quiz-tips,#display-cashe-quiz-page #cashe-quiz-tips,#display-bhanix-quiz-page #bhanix-quiz-tips, #display-competitive-analysis-quiz-page #competitive-analysis-quiz-tips
 {
     position : absolute;
     top : 20%;
