--- a/src/css/casheLearnings.css
+++ b/src/css/casheLearnings.css
@@ -25,7 +25,7 @@ div.CASHe-topics-list
 div.word-doc{
     overflow-y:auto;
 }
-#displayDIV
+#displayDIV, #displayWebsiteLinks
 {
     position : absolute;
     height : 80%;
@@ -33,6 +33,7 @@ div.word-doc{
     max-width : 80%;
     top : 18.5%;
     left : 28.5%;  
+    color : black;
 }
 td
 {
