--- a/css/quiz.css
+++ b/css/quiz.css
@@ -78,7 +78,7 @@ table
 {
     background-color : rgb(72, 213, 77)
 }
-.prev:link, .prev:visited, .prev:active:hover
+/* .start-quiz .prev:link, .start-quiz .prev:visited, .start-quiz .prev:active:hover
 {
     border-radius : 20%;
     color : white;
@@ -89,10 +89,10 @@ table
     left : 30px;    
     bottom : 30px;
 }
-.prev:hover
+.start-quiz .prev:hover
 {
     background-color : rgb(72, 213, 77)
-}
+} */
 #fintech-submit-button
 {
     border-radius : 20%;
@@ -164,6 +164,31 @@ table
     position : absolute;
     left : 30px;    
     bottom : 30px;
+}
+
+#fintech-start:hover, #cashe-start:hover, #bhanix-start:hover, #competitive-analysis-start:hover
+{
+    background-color : rgb(72, 213, 77)
+}
+
+/* prev button CSS all 4 quizzes */
+#fintech-prev,
+#cashe-prev,
+#bhanix-prev,
+#competitive-analysis-prev
+{
+    border-radius : 20%;
+    color : white;
+    font-weight : bold;
+    background-color : green;
+    border-color : green;
+    position : absolute;
+    left : 30px;    
+    bottom : 30px;
+}
+#fintech-prev:hover, #cashe-prev:hover, #bhanix-prev:hover, #competitive-analysis-prev:hover
+{
+    background-color : rgb(72, 213, 77)
 }
 
 #fintech-countdown-timer, #cashe-countdown-timer, #bhanix-countdown-timer, #competitive-analysis-countdown-timer
