--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -172,7 +172,7 @@ body
     width : 80%;
     max-width : 80%;
     padding : 3px;
-    border : 4px solid rgb(192,192,192);
+    border : 4px solid black;
 }
 #welcome-heading
 {
@@ -204,11 +204,16 @@ a{
     color : white;
 }
 
+.progress
+{
+    border : 2px solid black;
+}
+
 #display-quiz-pages
 {
     display : none;
     position : absolute;
-    border : 4px solid grey;
+    border : 4px solid black;
     height : 70%;
     width : 60%;
     top : 18.5%;
