hovering for quiz topics was OFF. its fixed now

--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -99,7 +99,10 @@ body
     height : 60px;
     max-height : 60px; 
 }
-
+.quiz-topics:hover
+{
+    background-color : rgb(255,153,51);
+}
 .word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos
 {
     padding-left : 40px;
