--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -90,6 +90,16 @@ body
     height : 60px;
     max-height : 60px; 
 }
+#displayBlankPage
+{
+    position : absolute;
+    height : 70%;
+    width : 60%;
+    top : 18.5%;
+    left : 28.5%; 
+    display : none;
+    border :4px solid black;
+}
 .videos, .word-doc, .word-docs, .ppt-docs, .pdf-doc, .pdf-docs, .links, .quiz-topics
 {
     border-bottom : 1px solid silver;
