perfectly work CASHE static page

--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -104,7 +104,7 @@ body
 {
     position : absolute;
     top : 30%;
-    left : 10px;
+    left : 10%;
     color : black;
 }
 .videos, .word-doc, .word-docs, .ppt-docs, .pdf-doc, .pdf-docs, .links, .quiz-topics
