--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -1,5 +1,3 @@
-
-
 #welcome-heading
 {
     position : sticky;
@@ -22,14 +20,17 @@ div.CASHe-topics-list
     left : 0px;
     background-color : rgb(192,192,192);
 }
-#displayDIV
+div.word-doc{
+    overflow-y:auto;
+}
+#displayDIV, #displayWebsiteLinks
 {
     position : absolute;
-    height : 84%;
+    height : 80%;
     min-width: 71.5%;
-    max-width : 85%;
-    top : 15.5%;
-    left : 25.5%;
+    max-width : 80%;
+    top : 18.5%;
+    left : 28.5%;  
 }
 td
 {
@@ -44,7 +45,7 @@ a:visited , a:link
 
 }
 
-/* button
+button
 {
     background-color: transparent;
     border: none;
@@ -56,13 +57,18 @@ a:visited , a:link
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-} */
+}
 
-/* #vid2, #vid3, #vid4, #vid5, #vid6, #vid1
+#vid2, #vid3, #vid4, #vid5, #vid6, #vid1
 {
     cursor : pointer;
     display : none;
     height : 80px;
+}
+
+/* div
+{
+    padding : 2px;
 } */
 
 body
@@ -73,7 +79,21 @@ body
 {
     background-color : rgb(255,153,51); 
 }
+.changeBgColor
+{
+    background-color : blue !important;
+}
 
+.videos:focus
+{
+    background-color : blue;
+}
+
+/* .quiz-topics:hover, #quiz:hover
+{
+    /* background-color : orange; */
+    /* color : black; 
+} */
 .vid, .documentation, .ppt, .links-websites, #quiz, .word-doc, .pdf-doc
 {
     cursor : pointer;
@@ -87,30 +107,6 @@ body
     height : 60px;
     max-height : 60px; 
 }
-#displayBlankPage, #displayWebsiteLinks
-{
-    position : absolute;
-    height : 70%;
-    width : 60%;
-    top : 18.5%;
-    left : 28.5%; 
-    display : none;
-    border :4px solid black;
-}
-.navigateText
-{
-    position : absolute;
-    top : 30%;
-    left : 10%;
-    color : black;
-}
-.click-link
-{
-    position : absolute;
-    top : 45%;
-    left : 35%;
-    color : black;
-}
 .videos, .word-doc, .word-docs, .ppt-docs, .pdf-doc, .pdf-docs, .links, .quiz-topics
 {
     border-bottom : 1px solid silver;
@@ -118,12 +114,10 @@ body
     display  : none;
     color : white;
     height : 60px;
-    max-height : 60px; 
+    max-height : 60px;
+    
 }
-.quiz-topics:hover
-{
-    background-color : rgb(255,153,51);
-}
+
 .word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos
 {
     padding-left : 40px;
@@ -173,8 +167,8 @@ body
 {
     position : sticky;
     top : 0%;
-    width : 100%;
-    max-width : 100%;
+    width : 80%;
+    max-width : 80%;
     padding : 3px;
     border : 4px solid black;
 }
@@ -261,17 +255,10 @@ a{
 {
     /*padding-top : 10%;*/
     padding-top : 6.5%;
-    cursor : pointer;
-    display : none;
-    height : 80px;
-
 }
 #vid3, #vid6
 {
     padding-top : 3.2%;
-    cursor : pointer;
-    display : none;
-    height : 80px;
 }
 /* --------------------------------------*/
 
