--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -23,7 +23,7 @@ div.CASHe-topics-list
 div.word-doc{
     overflow-y:auto;
 }
-#displayDIV, #displayWebsiteLinks
+#displayDIV
 {
     position : absolute;
     height : 80%;
@@ -32,6 +32,29 @@ div.word-doc{
     top : 18.5%;
     left : 28.5%;  
 }
+
+#displayWebsiteLinks
+{
+    position : absolute;
+    border : 4px solid black;
+    top : 18.5%;
+    left : 28.5%;
+    height : 70%;
+    width : 60%;
+    padding-top:10%;
+}
+
+#display-quiz-pages
+{
+    display : none;
+    position : absolute;
+    border : 4px solid black;
+    height : 70%;
+    width : 60%;
+    top : 18.5%;
+    left : 28.5%;
+}
+
 td
 {
     padding : 10px;
@@ -162,13 +185,24 @@ body
     color : white;
     font-weight : bold;
 }
+.navigateText
+{
+    position : absolute;
+    top : 20%;
+    left : 35%;
+    border : 4px solid black;
+    padding-top : 13%;
+    padding-left : 5%;
+    padding-right : 5%;
+    height : 70%;
+    max-width : 80%;
+    color : black;
 
+}
 #display
 {
     position : sticky;
     top : 0%;
-    width : 80%;
-    max-width : 80%;
     padding : 3px;
     border : 4px solid black;
 }
@@ -207,16 +241,7 @@ a{
     border : 2px solid black;
 }
 
-#display-quiz-pages
-{
-    display : none;
-    position : absolute;
-    border : 4px solid black;
-    height : 70%;
-    width : 60%;
-    top : 18.5%;
-    left : 28.5%;
-}
+
 /* original code */
 #display-fintech-quiz-page #fintech-quiz-tips,#display-cashe-quiz-page #cashe-quiz-tips,#display-bhanix-quiz-page #bhanix-quiz-tips, #display-competitive-analysis-quiz-page #competitive-analysis-quiz-tips
 {
