this is the actual branch of temp-branch-01 which I have copied the code from remote repository

--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -107,11 +107,10 @@ body
     background-color : blue !important;
 }
 
-.videos:focus
+.videos.selected
 {
-    background-color : blue;
+    background-color : orange;
 }
-
 /* .quiz-topics:hover, #quiz:hover
 {
     /* background-color : orange; */
