--- a/css/quiz.css
+++ b/css/quiz.css
@@ -136,10 +136,10 @@ table
     display : none;
 } */
 
-/* #displayFintechQuizScore
+#displayFintechQuizScore
 {
     display : none;
-} */
+}
 #fintechScoreText
 {
     color : black;
@@ -279,7 +279,7 @@ original code
   .container input:checked ~ .checkmark {
     background-color: green;
   }*/
-  
+
 .quiz-question
 {
         text-align : center;
